[package]
name = "sark_pathfinding"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/sarkahn/sark_pathfinding_rs"
repository = "https://github.com/sarkahn/sark_pathfinding_rs"
license = "MIT"
readme = "README.md"
description = "A simple implementation of the astar pathfinding algorthim from red blob games https://www.redblobgames.com/pathfinding/a-star/implementation.html."
keywords = ["bevy", "pathfinding", "2d", "astar"]

[dependencies]
glam = { version = "0.29" }
ahash = "0.8.7"
arrayvec = "0.7.2"
sark_grids = { path = "../sark_grids_rs" }
ordered-float = "4.6.0"

[dev-dependencies.bevy]
version = "0.15"
default-features = false
features = ["png", "bevy_winit", "bevy_render"]

[dev-dependencies]
bevy_ascii_terminal = { path = "../bevy_ascii_terminal" }
noise = "0.7.0"
rand = "0.8.5"
